--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,12 @@
 asgiref==3.6.0
+bleach==6.0.0
+bx-py-utils==81
 Django==4.2.1
+django-extensions==3.2.1
+django-tools==0.54.0
+icdiff==2.0.6
+pprintpp==0.4.0
+psycopg2==2.9.6
+six==1.16.0
 sqlparse==0.4.4
+webencodings==0.5.1
